temp fix audio panel height on small phones

--- a/hymnsAccordion3.css
+++ b/hymnsAccordion3.css
@@ -182,8 +182,10 @@ body {
 
 @media (prefers-reduced-motion: no-preference) {
 	.accordion_panel {
-		transition: flex-basis calc(var(--_time) * 4),
-			flex-grow calc(var(--_time) * 4), margin var(--_time);
+		transition:
+			flex-basis calc(var(--_time) * 4),
+			flex-grow calc(var(--_time) * 4),
+			margin var(--_time);
 	}
 }
 .accordion_open {
@@ -209,7 +211,9 @@ body {
 	);
 	/* padding-right: var(--_panel-padding); */
 }
-
+#panel3.open {
+	min-height: fit-content;
+}
 #panel1 {
 	position: relative;
 	isolation: isolate;
@@ -479,11 +483,11 @@ body {
 .accordion_panel.open .accordion_content p {
 	transform: translateY(0);
 	opacity: 1;
-	transition: opacity var(--_time) var(--_time),
+	transition:
+		opacity var(--_time) var(--_time),
 		transform var(--_time) var(--_time);
 }
-.accordion_panel.open .accordion_content {
-}
+
 .accordion_panel.transformDown {
 	transform: translateY(
 		calc(
@@ -499,7 +503,8 @@ body {
 			(
 					var(--_button-size) + (var(--_panel-padding) * 2) +
 						(var(--_panel-gap) * 2)
-				) * -1
+				) *
+				-1
 		)
 	);
 	/* transition: filter calc(var(--_time)/2), transform calc(var(--_time)/2); */
@@ -721,7 +726,8 @@ body {
 
 .satb.selected {
 	background-color: hsl(60, 100%, 90%);
-	box-shadow: 0.2rem 0.2rem 0.3rem hsl(60, 100%, 90%),
+	box-shadow:
+		0.2rem 0.2rem 0.3rem hsl(60, 100%, 90%),
 		-0.2rem -0.2rem 0.3rem hsl(60, 100%, 90%),
 		0.2rem -0.2rem 0.3rem hsl(60, 100%, 90%),
 		-0.2rem 0.2rem 0.3rem hsl(60, 100%, 90%);
@@ -735,7 +741,8 @@ body {
 /* .circle.melody:is(:hover,:focus){background-color: hsl(120, 100%, 90%);} */
 .melody.selected {
 	background-color: hsl(120, 100%, 90%);
-	box-shadow: 0.2rem 0.2rem 0.3rem hsl(120, 100%, 90%),
+	box-shadow:
+		0.2rem 0.2rem 0.3rem hsl(120, 100%, 90%),
 		-0.2rem -0.2rem 0.3rem hsl(120, 100%, 90%),
 		0.2rem -0.2rem 0.3rem hsl(120, 100%, 90%),
 		-0.2rem 0.2rem 0.3rem hsl(120, 100%, 90%);
@@ -747,7 +754,8 @@ body {
 /* .circle.alto:is(:hover,:focus){background-color: hsl(240, 100%, 90%);} */
 .alto.selected {
 	background-color: hsl(240, 100%, 90%);
-	box-shadow: 0.2rem 0.2rem 0.3rem hsl(240, 100%, 90%),
+	box-shadow:
+		0.2rem 0.2rem 0.3rem hsl(240, 100%, 90%),
 		-0.2rem -0.2rem 0.3rem hsl(240, 100%, 90%),
 		0.2rem -0.2rem 0.3rem hsl(240, 100%, 90%),
 		-0.2rem 0.2rem 0.3rem hsl(240, 100%, 90%);
@@ -759,7 +767,8 @@ body {
 /* .circle.tenor:is(:hover,:focus){background-color: hsl(0, 100%, 90%);} */
 .tenor.selected {
 	background-color: hsl(0, 100%, 90%);
-	box-shadow: 0.2rem 0.2rem 0.3rem hsl(0, 100%, 90%),
+	box-shadow:
+		0.2rem 0.2rem 0.3rem hsl(0, 100%, 90%),
 		-0.2rem -0.2rem 0.3rem hsl(0, 100%, 90%),
 		0.2rem -0.2rem 0.3rem hsl(0, 100%, 90%),
 		-0.2rem 0.2rem 0.3rem hsl(0, 100%, 90%);
@@ -771,7 +780,8 @@ body {
 /* .circle.bass:is(:hover,:focus){background-color: hsl(0, 59%, 90%);} */
 .bass.selected {
 	background-color: hsl(0, 59%, 90%);
-	box-shadow: 0.2rem 0.2rem 0.3rem hsl(0, 59%, 90%),
+	box-shadow:
+		0.2rem 0.2rem 0.3rem hsl(0, 59%, 90%),
 		-0.2rem -0.2rem 0.3rem hsl(0, 59%, 90%),
 		0.2rem -0.2rem 0.3rem hsl(0, 59%, 90%),
 		-0.2rem 0.2rem 0.3rem hsl(0, 59%, 90%);
@@ -783,7 +793,8 @@ body {
 /* .circle.piano:is(:hover,:focus){background-color: hsl(180, 100%, 90%);} */
 .piano.selected {
 	background-color: hsl(180, 100%, 90%);
-	box-shadow: 0.2rem 0.2rem 0.3rem hsl(180, 100%, 90%),
+	box-shadow:
+		0.2rem 0.2rem 0.3rem hsl(180, 100%, 90%),
 		-0.2rem -0.2rem 0.3rem hsl(180, 100%, 90%),
 		0.2rem -0.2rem 0.3rem hsl(180, 100%, 90%),
 		-0.2rem 0.2rem 0.3rem hsl(180, 100%, 90%);
@@ -810,8 +821,10 @@ body {
 	width: 5rem;
 	aspect-ratio: 1;
 	background-color: black;
-	box-shadow: var(--_buttonColor) 1rem 1rem 1rem,
-		var(--_buttonColor) -1rem 1rem 1rem, var(--_buttonColor) -1rem -1rem 1rem,
+	box-shadow:
+		var(--_buttonColor) 1rem 1rem 1rem,
+		var(--_buttonColor) -1rem 1rem 1rem,
+		var(--_buttonColor) -1rem -1rem 1rem,
 		var(--_buttonColor) 1rem -1rem 1rem;
 	border-radius: 10px;
 	z-index: 10;
@@ -1003,8 +1016,18 @@ button.down.hidden {
 	display: inline-block;
 }
 .liturgyContents li > h4 {
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	font-family:
+		system-ui,
+		-apple-system,
+		BlinkMacSystemFont,
+		"Segoe UI",
+		Roboto,
+		Oxygen,
+		Ubuntu,
+		Cantarell,
+		"Open Sans",
+		"Helvetica Neue",
+		sans-serif;
 
 	font-weight: 700;
 	text-shadow: 1px 1px var(--liturgyCategoriesColour);
@@ -1100,4 +1123,7 @@ button.down.hidden {
 	font-size: larger;
 	text-align: center;
 	line-height: 2.5rem;
+}
+.accordion_panel.open .accordion_content {
+	min-height: min-content;
 }
